--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -2506,6 +2506,8 @@ global without sharing virtual class Rollup {
 
   private static RollupControl__mdt getSingleControlOrDefault(SObjectField whereField, Object whereValue, RollupControl__mdt testOverrideData) {
     // there are multiple spots where testOverrideData can be supplied, which is why it's necessary to pass the argument to this method
+    // TODO - provide new parameter on RollupControl__mdt that can be used to swap to synchronous for single-record updates
+    // (a la updates made from datatables using LDS)
     if (testOverrideData != null) {
       return testOverrideData;
     } else if (whereField == RollupControl__mdt.Id || whereField == RollupControl__mdt.DeveloperName) {
