Properly encapsulated ORDER BY only needed for RollupFullBatchRecalculator with an assist from @nojanv

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -1827,14 +1827,6 @@ global without sharing virtual class Rollup {
     return queryFields;
   }
 
-  private static String getFullRecalcQueryString(List<Rollup__mdt> metas) {
-    List<String> orderByFields = new List<String>();
-    for (Rollup__mdt meta : metas) {
-      orderByFields.add(meta.LookupFieldOnCalcItem__c);
-    }
-    return '\nORDER BY ' + String.join(orderByFields, ',');
-  }
-
   private static List<Rollup> getFullRecalcRollups(List<FullRecalculationMetadata> fullRecalcMetas, InvocationPoint invokePoint) {
     Map<SObjectType, RollupMetadata> typeToWrappedMeta = new Map<SObjectType, RollupMetadata>();
     for (Integer index = 0; index < fullRecalcMetas.size(); index++) {
@@ -1927,8 +1919,7 @@ global without sharing virtual class Rollup {
     } else if (shouldQueue) {
       return new RollupDeferredFullRecalcProcessor(matchingMeta, calcItemType, queryString, recordIds, invokePoint);
     } else {
-      String queryWithOrderBy = (queryString + getFullRecalcQueryString(matchingMeta)).replace('ALL ROWS', '');
-      return new RollupFullBatchRecalculator(queryWithOrderBy, invokePoint, matchingMeta, calcItemType, recordIds);
+      return new RollupFullBatchRecalculator(queryString, invokePoint, matchingMeta, calcItemType, recordIds);
     }
   }
 
